attempted fixing z-index issuefor place detail tabs, removed z-index-1

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1007,7 +1007,7 @@ border-color: transparent #061c3e #061c3e transparent;
 
 .placeDetailTabs .tabs {
     position: relative;
-    z-index: -1;
+/*    z-index: -1;*/
 }
 
 
